--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "author": "edevars <e.devars.dev@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development webpack serve",
-    "build": "NODE_ENV=production webpack",
-    "start": "NODE_ENV=production yarn run build && node server.js"
+    "build-client": "webpack --config webpack.config.client.js",
+    "build": "NODE_ENV=development npm run build-client && npm run build-server",
+    "build-server": "webpack --config webpack.config.server.js",
+    "build-dev": "NODE_ENV=development npm run build-server && node --inspect dist/index.js",
+    "dev": "nodemon --ext ts --exec \"npm run build-dev\"",
+    "start": "NODE_ENV=development npm run build && NODE_ENV=development node dist/index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
@@ -23,6 +28,9 @@
   },
   "devDependencies": {
     "@swc/core": "^1.3.24",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.5",
+    "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
@@ -30,9 +38,14 @@
     "eslint-plugin-react": "^7.31.11",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.21",
+    "react-dev-utils": "^12.0.1",
     "swc-loader": "^0.2.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-middleware": "^6.0.2",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-hot-middleware": "^2.25.3",
+    "webpack-node-externals": "^3.0.0"
   }
 }
